implement swagger for all routes
