# controllers/authController.go
@@ -13,14 +13,14 @@ import (
 	"golang.org/x/crypto/bcrypt"
 )
 
-// Sign up       godoc
+// Signup	       godoc
 // @Summary      Create a new user
 // @Description  Takes a User JSON and store in DB. Return message.
 // @Tags         users
 // @Produce      json
-// @Param        user  body      models.User  true  "User JSON"
+// @Param        user  body   models.User  true  "User JSON"
 // @Success      200   {object}  models.User
-// @Router       /auth [signup]
+// @Router       /auth/signup [post]
 func Signup(c *gin.Context) {
 	var body struct {
 		Name     string `json:"name" binding:"required"`
@@ -52,6 +52,14 @@ func Signup(c *gin.Context) {
 	c.JSON(200, &user)
 }
 
+// Login	       godoc
+// @Summary      Log a new user in
+// @Description  Takes a User JSON and store in DB. Return message.
+// @Tags         users
+// @Produce      json
+// @Param        user  body      models.User  true  "User JSON"
+// @Success      200   {object}  models.User
+// @Router       /auth/login [post]
 func Login(c *gin.Context) {
 
 	var body struct {
